--- a/src/Solnet.Extensions/Solnet.Extensions.csproj
+++ b/src/Solnet.Extensions/Solnet.Extensions.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IsExternalInit" Version="1.0.2" PrivateAssets="all" />
     <ProjectReference Include="..\Solnet.Programs\Solnet.Programs.csproj" />
     <ProjectReference Include="..\Solnet.Rpc\Solnet.Rpc.csproj" />
     <ProjectReference Include="..\Solnet.Wallet\Solnet.Wallet.csproj" />
