--- a/SharedBuildProperties.props
+++ b/SharedBuildProperties.props
@@ -1,19 +1,19 @@
 <Project DefaultTargets="Build" 
   xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Product>Solnet</Product>
-    <Version>6.0.6</Version>
+    <Product>Solnet.Unity</Product>
+    <Version>2.6.0.6</Version>
     <Copyright>Copyright 2022 &#169; Solnet</Copyright>
-    <Authors>blockmountain</Authors>
-    <PublisherName>blockmountain</PublisherName>
-    <RepositoryUrl>https://github.com/bmresearch/Solnet</RepositoryUrl>
+    <Authors>garbles-dev</Authors>
+    <PublisherName>garbles-dev</PublisherName>
+    <RepositoryUrl>https://github.com/garbles-dev/Solnet.Unity</RepositoryUrl>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <LangVersion>latest</LangVersion>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageDescription>Solnet is Solana's .NET integration library.</PackageDescription>
-    <PackageTags>solana;solnet;sol;net5;spl</PackageTags>
-    <PackageReleaseNotes>https://github.com/bmresearch/Solnet/releases</PackageReleaseNotes>
+    <PackageDescription>Solnet.Unity is Solana's .NET standard 2.0 integration library.</PackageDescription>
+    <PackageTags>solana;solnet;sol;net2.0;unity;spl</PackageTags>
+    <PackageReleaseNotes>https://github.com/garbles-dev/Solnet.Unity/releases</PackageReleaseNotes>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
