--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master # Default release branch
-      - net5 # .NET5 release branch
 jobs:
   publish:
     name: build, pack & publish
@@ -21,52 +20,52 @@ jobs:
           script-path: build.cake
           target: Pack
           cake-bootstrap: true
-      - name: Publish Solnet.Extensions on version change
-        uses: bmresearch/publish-nuget@master
+      - name: Publish Solnet.Unity.Extensions on version change
+        uses: garbles-dev/publish-nuget@master
         with:
-          PROJECT_FILE_PATH: src/Solnet.Extensions/Solnet.Extensions.csproj
-          PACKAGE_NAME: Solnet.Extensions
+          PROJECT_FILE_PATH: src/Solnet.Unity.Extensions/Solnet.Unity.Extensions.csproj
+          PACKAGE_NAME: Solnet.Unity.Extensions
           VERSION_FILE_PATH: SharedBuildProperties.props
           VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
           TAG_FORMAT: v*
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
           INCLUDE_SYMBOLS: true
-      - name: Publish Solnet.Wallet on version change
-        uses: bmresearch/publish-nuget@master
+      - name: Publish Solnet.Unity.Wallet on version change
+        uses: garbles-dev/publish-nuget@master
         with:
-          PROJECT_FILE_PATH: src/Solnet.Wallet/Solnet.Wallet.csproj
-          PACKAGE_NAME: Solnet.Wallet
+          PROJECT_FILE_PATH: src/Solnet.Unity.Wallet/Solnet.Unity.Wallet.csproj
+          PACKAGE_NAME: Solnet.Unity.Wallet
           VERSION_FILE_PATH: SharedBuildProperties.props
           VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
           TAG_FORMAT: v*
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
           INCLUDE_SYMBOLS: true
-      - name: Publish Solnet.Rpc on version change
-        uses: bmresearch/publish-nuget@master
+      - name: Publish Solnet.Unity.Rpc on version change
+        uses: garbles-dev/publish-nuget@master
         with:
-          PROJECT_FILE_PATH: src/Solnet.Rpc/Solnet.Rpc.csproj
-          PACKAGE_NAME: Solnet.Rpc
+          PROJECT_FILE_PATH: src/Solnet.Unity.Rpc/Solnet.Unity.Rpc.csproj
+          PACKAGE_NAME: Solnet.Unity.Rpc
           VERSION_FILE_PATH: SharedBuildProperties.props
           VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
           TAG_FORMAT: v*
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
           INCLUDE_SYMBOLS: true
-      - name: Publish Solnet.KeyStore on version change
-        uses: bmresearch/publish-nuget@master
+      - name: Publish Solnet.Unity.KeyStore on version change
+        uses: garbles-dev/publish-nuget@master
         with:
-          PROJECT_FILE_PATH: src/Solnet.KeyStore/Solnet.KeyStore.csproj
-          PACKAGE_NAME: Solnet.KeyStore
+          PROJECT_FILE_PATH: src/Solnet.Unity.KeyStore/Solnet.Unity.KeyStore.csproj
+          PACKAGE_NAME: Solnet.Unity.KeyStore
           VERSION_FILE_PATH: SharedBuildProperties.props
           VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
           TAG_FORMAT: v*
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
           INCLUDE_SYMBOLS: true
-      - name: Publish Solnet.Programs on version change
+      - name: Publish Solnet.Unity.Programs on version change
         id: publish_nuget
-        uses: bmresearch/publish-nuget@master
+        uses: garbles-dev/publish-nuget@master
         with:
-          PROJECT_FILE_PATH: src/Solnet.Programs/Solnet.Programs.csproj
-          PACKAGE_NAME: Solnet.Programs
+          PROJECT_FILE_PATH: src/Solnet.Unity.Programs/Solnet.Unity.Programs.csproj
+          PACKAGE_NAME: Solnet.Unity.Programs
           VERSION_FILE_PATH: SharedBuildProperties.props
           VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
           TAG_FORMAT: v*
@@ -81,38 +80,38 @@ jobs:
           body_path: RELEASE-NOTES.txt
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-      - name: Upload Solnet.Extensions release assets
+      - name: Upload Solnet.Unity.Extensions release assets
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.ACCESS_TOKEN }}
-          file: artifacts/Solnet.Extensions.dll
+          file: artifacts/Solnet.Unity.Extensions.dll
           tag: ${{ steps.publish_nuget.outputs.VERSION }}
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-      - name: Upload Solnet.Wallet release assets
+      - name: Upload Solnet.Unity.Wallet release assets
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.ACCESS_TOKEN }}
-          file: artifacts/Solnet.Wallet.dll
+          file: artifacts/Solnet.Unity.Wallet.dll
           tag: ${{ steps.publish_nuget.outputs.VERSION }}
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-      - name: Upload Solnet.Rpc release assets
+      - name: Upload Solnet.Unity.Rpc release assets
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.ACCESS_TOKEN }}
-          file: artifacts/Solnet.Rpc.dll
+          file: artifacts/Solnet.Unity.Rpc.dll
           tag: ${{ steps.publish_nuget.outputs.VERSION }}
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-      - name: Upload Solnet.KeyStore release assets
+      - name: Upload Solnet.Unity.KeyStore release assets
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.ACCESS_TOKEN }}
-          file: artifacts/Solnet.KeyStore.dll
+          file: artifacts/Solnet.Unity.KeyStore.dll
           tag: ${{ steps.publish_nuget.outputs.VERSION }}
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-      - name: Upload Solnet.Programs release assets
+      - name: Upload Solnet.Unity.Programs release assets
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.ACCESS_TOKEN }}
-          file: artifacts/Solnet.Programs.dll
+          file: artifacts/Solnet.Unity.Programs.dll
           tag: ${{ steps.publish_nuget.outputs.VERSION }}
           upload_url: ${{ steps.create_release.outputs.upload_url }}
