--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,9 +2,9 @@ name: .NET
 
 on:
   push:
-    branches: [ master, net5 ]
+    branches: [ master ]
   pull_request:
-    branches: [ master, net5 ]
+    branches: [ master ]
 
 jobs:
   build:
