--- a/test/Solnet.Unity.Rpc.Test/Solnet.Unity.Rpc.Test.csproj
+++ b/test/Solnet.Unity.Rpc.Test/Solnet.Unity.Rpc.Test.csproj
@@ -342,6 +342,9 @@
     <None Update="Resources\Streaming\Logs\LogsSubscribeAll.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <ContentWithTargetPath Include="Resources\Streaming\Logs\LogsSubscribeMention.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </ContentWithTargetPath>
     <None Update="Resources\Streaming\Logs\LogsSubscribeMention.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
