Load TokenWallet via Batch RPC

--- a/test/Solnet.Extensions.Test/Solnet.Extensions.Test.csproj
+++ b/test/Solnet.Extensions.Test/Solnet.Extensions.Test.csproj
@@ -30,6 +30,12 @@
     <None Update="Resources\TokenMint\SimpleTokenList.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\TokenWallet\SampleBatchRequest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\TokenWallet\SampleBatchResponse.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\TokenWallet\GetBalanceResponse.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
