fixing pipeline due to unpinned cake version in gh action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           script-path: build.cake
           target: Pack
+          cake-version: 1.1.0
           cake-bootstrap: true
       - name: Publish Solnet.Extensions on version change
         uses: bmresearch/publish-nuget@master
