--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           script-path: build.cake
           target: Report
+          cake-version: 1.1.0
           cake-bootstrap: true
       - name: Publish coverage report to coveralls.io
         uses: coverallsapp/github-action@v1.1.2
