--- a/src/Solnet.Extensions/Solnet.Extensions.csproj
+++ b/src/Solnet.Extensions/Solnet.Extensions.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Solnett.Extensions</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
