Ed25519 Cryptography Library is now maintained by Bifrost & Logging upgraded to NET8
Solnet will no longer use Chaos.NaCl & now uses a forked version maintained by Bifrost to maximize security across the nuget dependencies and prevent a supply chain attack like what was seen in javascript community.
Bouncycastle will be replaced soon as well.

--- a/src/Solnet.Wallet/Solnet.Wallet.csproj
+++ b/src/Solnet.Wallet/Solnet.Wallet.csproj
@@ -11,7 +11,7 @@
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
       <_Parameter1>Solnet.Wallet.Test</_Parameter1>
     </AssemblyAttribute>
-    <PackageReference Include="Chaos.NaCl.Standard" Version="1.0.0" />
+    <PackageReference Include="BifrostSecurity" Version="1.0.1" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
   </ItemGroup>
 
