--- a/src/Solnet.Examples/Solnet.Examples.csproj
+++ b/src/Solnet.Examples/Solnet.Examples.csproj
@@ -8,15 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BifrostSecurity" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Solnet.Extensions\Solnet.Extensions.csproj" />
     <ProjectReference Include="..\Solnet.KeyStore\Solnet.KeyStore.csproj" />
     <ProjectReference Include="..\Solnet.Programs\Solnet.Programs.csproj" />
     <ProjectReference Include="..\Solnet.Rpc\Solnet.Rpc.csproj" />
     <ProjectReference Include="..\Solnet.Wallet\Solnet.Wallet.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Chaos.NaCl.Standard" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
