--- a/src/Solnet.KeyStore/Solnet.KeyStore.csproj
+++ b/src/Solnet.KeyStore/Solnet.KeyStore.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Chaos.NaCl.Standard" Version="1.0.0" />
+    <PackageReference Include="BifrostSecurity" Version="1.0.1" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
   </ItemGroup>
 
