Removed duplicate references and improved encryption and account management
Removed multiple duplicate and unnecessary references, improved encryption methods and account management logic. Specific changes include:
- Removed duplicate definitions and added visibility in `Solnet.Rpc.csproj`.
- Added references, optimized constructors and methods, and added `ImportMany` methods in `Account.cs`.
- Optimized `LoadAsync` method in `HardcodedWordListSource.cs`.
- Removed `Org.BouncyCastle` references in `Mnemonic.cs` and `Ed25519Bip32.cs` and used built-in encryption methods instead.
- Removed `Portable.BouncyCastle` references in `Solnet.Wallet.csproj`.
- Used `RandomNumberGenerator` in `RandomUtils.cs` instead.
- Removed multiple utility methods in `Utils.cs`.
- Optimize account initialization method in `Wallet.cs`.
- Added address lookup table program related files to support create, freeze, expand, deactivate and close instructions.

--- a/src/Solnet.Wallet/Solnet.Wallet.csproj
+++ b/src/Solnet.Wallet/Solnet.Wallet.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Description>
@@ -12,8 +12,6 @@
       <_Parameter1>Solnet.Wallet.Test</_Parameter1>
     </AssemblyAttribute>
     <PackageReference Include="BifrostSecurity" Version="1.0.1" />
-    <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
   </ItemGroup>
 
-  <Import Project="..\..\SharedBuildProperties.props" />
 </Project>
