Refactor PrivateKey class to enforce immutability and improve key security

--- a/src/Solnet.KeyStore/Solnet.KeyStore.csproj
+++ b/src/Solnet.KeyStore/Solnet.KeyStore.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ByteArrayExtensions.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BifrostSecurity" Version="1.0.1" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
   </ItemGroup>
