--- a/src/Solnet.Programs/Solnet.Programs.csproj
+++ b/src/Solnet.Programs/Solnet.Programs.csproj
@@ -13,5 +13,9 @@
     <Folder Include="Models\TokenSwap\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Runtime.Extensions" Version="4.3.1" />
+  </ItemGroup>
+
   <Import Project="..\..\SharedBuildProperties.props" />
 </Project>
